Fix footer overlap

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,4 +7,5 @@
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
   // background-color: #f5f5f5;
+  z-index: 2;
 }
